Sculpt: Fix #105326: Fill brush function invert(ctrl) only works one way

Problem was the use or OR instead of XOR.

Note: I decided to use an if statement with the !
operator instead of XOR for code clarity.